--- a/components/ingestion-pipeline-mineru/pyproject.toml
+++ b/components/ingestion-pipeline-mineru/pyproject.toml
@@ -13,9 +13,10 @@ packages = [
 
 # Where you declare runtime dependencies
 [tool.poetry.dependencies]
-python = "~3.10"
+python = ">=3.11,<3.13"
 ingestion-pipeline = { path = "../ingestion-pipeline", develop = true }
-magic-pdf = { version = "1.2.2", extras = ["full"] }
+huggingface-hub = "^0.32.0"
+magic-pdf = {extras = ["full"], version = "^1.3.12"}
 
 [[tool.poetry.source]]
 name = "myhloli"
