--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 .vscode/
-.pytest_cache/W
+.pytest_cache/
+shiksha-ingestion/.env
+shiksha-ingestion/pipeline_steps/__pycache__/
+shiksha-ingestion/scert_action_verbs_prohibited.json
+shiksha-ingestion/scert_action_verbs.json
