Test for mem rag ops

--- a/components/rag-wrapper/pyproject.toml
+++ b/components/rag-wrapper/pyproject.toml
@@ -14,7 +14,7 @@ packages = [
 # Where you declare runtime dependencies
 # TODO: Cleanup
 [tool.poetry.dependencies]
-python = "~3.10"
+python = "~3.11"
 cachetools = "*"
 pyyaml = "~6.0.1"
 pandas = "2.2.0"
@@ -22,6 +22,7 @@ numpy = "1.26.3"
 openai = "1.55.3"
 tenacity = "*"
 tqdm = "*"
+python-dotenv = "*"
 azure-storage-blob = "*"
 pdf2image = "1.17.0"
 azure-ai-formrecognizer = "3.3.2"
