RAGWrapper: support for azure ai search backend

--- a/components/rag-wrapper/pyproject.toml
+++ b/components/rag-wrapper/pyproject.toml
@@ -24,9 +24,11 @@ tenacity = "*"
 tqdm = "*"
 python-dotenv = "*"
 azure-storage-blob = "*"
+azure-identity = "^1.15.0"
 pdf2image = "1.17.0"
 azure-ai-formrecognizer = "3.3.2"
 llama-index-core = "0.10.68.post1"
+nest-asyncio = "^1.6.0"
 llama-index-embeddings-azure-openai = "0.1.6"
 llama-index-embeddings-openai = "0.1.11"
 llama-index-llms-azure-openai = "0.1.5"
