--- a/shiksha-api/app-service/Dockerfile
+++ b/shiksha-api/app-service/Dockerfile
@@ -3,17 +3,26 @@ FROM python:3.11-slim
 # Set working directory
 WORKDIR /app
 
-# Install system dependencies
+# Install system dependencies and Poetry
 RUN apt-get update && apt-get install -y \
     gcc \
     g++ \
-    && rm -rf /var/lib/apt/lists/*
+    curl \
+    && rm -rf /var/lib/apt/lists/* \
+    && curl -sSL https://install.python-poetry.org | python3 -
 
-# Copy requirements first for better caching
-COPY requirements.txt .
+# Add Poetry to PATH
+ENV PATH="${PATH}:/root/.local/bin"
+
+# Configure Poetry to not create a virtual environment inside the Docker container
+RUN poetry config virtualenvs.create false
+
+# Copy pyproject.toml and poetry.lock (if exists)
+COPY pyproject.toml ./
+COPY poetry.lock* ./
 
 # Install Python dependencies
-RUN pip install --no-cache-dir -r requirements.txt
+RUN poetry install --no-interaction --no-ansi --no-dev
 
 # Copy application code
 COPY . .
