--- a/shiksha-api/app-service/.env.example
+++ b/shiksha-api/app-service/.env.example
@@ -1,36 +1,19 @@
-# Azure OpenAI Configuration
-AZURE_OPENAI_ENDPOINT=https://your-openai-resource.openai.azure.com/
-AZURE_OPENAI_API_VERSION=2024-02-01
-AZURE_OPENAI_DEPLOYMENT_NAME=gpt-4
+# Shiksha Copilot API Environment Configuration
 
-# Azure Authentication (Use Managed Identity in production)
-# AZURE_CLIENT_ID=your-client-id
-# AZURE_CLIENT_SECRET=your-client-secret
-# AZURE_TENANT_ID=your-tenant-id
-
-# Application Configuration
-APP_NAME=shiksha-api
-LOG_LEVEL=INFO
+# Application Settings
 DEBUG=False
-MAX_CONCURRENT_REQUESTS=100
+APP_NAME="Shiksha Copilot Fast API"
+HOST=0.0.0.0
+PORT=8000
 
-# Database Configuration (if needed)
-# DATABASE_URL=postgresql://user:password@localhost/dbname
+# Azure OpenAI Configuration
+AZURE_OPENAI_API_KEY=your_azure_openai_api_key_here
+AZURE_OPENAI_ENDPOINT=https://your-resource.openai.azure.com/
+AZURE_OPENAI_API_VERSION=2024-02-15-preview
+AZURE_OPENAI_DEPLOYMENT_NAME=your_deployment_name_here
 
-# Redis Configuration (for caching)
-# REDIS_URL=redis://localhost:6379
+# Bing Search Configuration
+BING_API_KEY=your_bing_search_api_key_here
 
-# RAG Configuration
-RAG_INDEX_NAME=shiksha-index
-RAG_SEARCH_TOP_K=5
-RAG_CHUNK_SIZE=1000
-RAG_CHUNK_OVERLAP=200
-
-# LiteLLM Configuration
-LITELLM_MODEL_NAME=azure/gpt-4
-LITELLM_MAX_TOKENS=4000
-LITELLM_TEMPERATURE=0.7
-
-# Autogen Configuration
-AUTOGEN_MAX_ROUND=10
-AUTOGEN_CACHE_SEED=42
+# Logging
+LOG_LEVEL=INFO
