--- a/components/ingestion-pipeline/pyproject.toml
+++ b/components/ingestion-pipeline/pyproject.toml
@@ -15,6 +15,7 @@ packages = [
 [tool.poetry.dependencies]
 python = "^3.10"
 pytesseract = "^0.3.9"
+PyPDF2 = "*"
 azure-ai-formrecognizer = "^3.3.3"
 pdf2image = "^1.16.0"
 litellm = "^1.65.1"
