Shiksha-API: Durable Functions updated to work with Qdrant vector store

--- a/shiksha-api/durable-functions/core/rag-wrapper/pyproject.toml
+++ b/shiksha-api/durable-functions/core/rag-wrapper/pyproject.toml
@@ -17,17 +17,18 @@ python = "~3.11"
 openai = "*"
 tenacity = "*"
 python-dotenv = "*"
-azure-identity = "^1.15.0"
-nest-asyncio = "^1.6.0"
-llama-index-core = "0.12.48"
-llama-index-embeddings-azure-openai = "0.3.9"
-llama-index-embeddings-openai = "0.3.1"
-llama-index-instrumentation = "0.2.0"
-llama-index-llms-azure-openai = "0.3.4"
-llama-index-llms-openai = "0.4.7"
-llama-index-vector-stores-azureaisearch = "0.3.8"
-llama-index-workflows = "1.1.0"
-azure-search-documents = "11.5.1"
+azure-identity = "*"
+nest-asyncio = "*"
+llama-index-core = "*"
+llama-index-embeddings-azure-openai = "*"
+llama-index-embeddings-openai = "*"
+llama-index-instrumentation = "*"
+llama-index-llms-azure-openai = "*"
+llama-index-llms-openai = "*"
+llama-index-vector-stores-azureaisearch = "*"
+llama-index-vector-stores-qdrant = "*"
+llama-index-workflows = "*"
+azure-search-documents = "*"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.0.0"             # For testing
