Shiksha API: App service added Dockerfile

--- a/shiksha-api/app-service/Dockerfile
+++ b/shiksha-api/app-service/Dockerfile
@@ -1,80 +1,55 @@
-# Multi-stage Docker build for FastAPI application with Poetry
-# Stage 1: Build dependencies
-FROM python:3.11-slim as builder
+# FastAPI + Python venv for deployment, Poetry for development
+FROM python:3.11-slim
 
-# Set environment variables
 ENV PYTHONUNBUFFERED=1 \
     PYTHONDONTWRITEBYTECODE=1 \
     PIP_NO_CACHE_DIR=1 \
     PIP_DISABLE_PIP_VERSION_CHECK=1
 
-# Install system dependencies
-RUN apt-get update && apt-get install -y \
-    build-essential \
-    curl \
+# System deps
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    build-essential curl ca-certificates \
     && rm -rf /var/lib/apt/lists/*
 
-# Install Poetry
-RUN pip install poetry==1.7.1
+# Create non-root user
+RUN groupadd --gid 1000 appuser && \
+    useradd --uid 1000 --gid 1000 --shell /bin/bash --create-home appuser
 
-# Configure Poetry to not create virtual environment (we're in Docker)
-ENV POETRY_NO_INTERACTION=1 \
-    POETRY_VENV_IN_PROJECT=1 \
-    POETRY_CACHE_DIR=/tmp/poetry_cache
+# Install Poetry temporarily for dependency export
+RUN pip install "poetry==1.7.1"
 
-# Set work directory
 WORKDIR /app
 
 # Copy Poetry configuration files
 COPY pyproject.toml poetry.lock* ./
 
-# Copy the local rag-wrapper dependency
+# Copy the local rag-wrapper dependency before generating requirements
 COPY app/rag-wrapper ./app/rag-wrapper
 
-# Install dependencies
-RUN poetry install --only=main --no-root && rm -rf $POETRY_CACHE_DIR
+# Copy all files first
+COPY --chown=appuser:appuser . .
 
-# Stage 2: Runtime
-FROM python:3.11-slim as runtime
+# Generate requirements.txt from Poetry (excluding local dependencies) and install in virtual environment
+RUN python -m venv /opt/venv && \
+    . /opt/venv/bin/activate && \
+    poetry export --only=main --format=requirements.txt --output=requirements.txt --without-hashes && \
+    # Remove the local dependency line from requirements.txt as we'll install it separately
+    grep -v "vellm-rag-wrapper" requirements.txt > requirements_clean.txt && \
+    pip install -r requirements_clean.txt && \
+    # Install the local rag-wrapper package
+    pip install -e ./app/rag-wrapper
 
-# Set environment variables
-ENV PYTHONUNBUFFERED=1 \
-    PYTHONDONTWRITEBYTECODE=1 \
-    PATH="/app/.venv/bin:$PATH"
+# Remove Poetry to reduce image size
+RUN pip uninstall -y poetry
 
-# Install system dependencies for runtime
-RUN apt-get update && apt-get install -y \
-    --no-install-recommends \
-    ca-certificates \
-    && rm -rf /var/lib/apt/lists/*
-
-# Create non-root user for security
-RUN groupadd --gid 1000 appuser && \
-    useradd --uid 1000 --gid 1000 --shell /bin/bash --create-home appuser
-
-# Set work directory
-WORKDIR /app
-
-# Copy virtual environment from builder stage
-COPY --from=builder --chown=appuser:appuser /app/.venv /app/.venv
-
-# Copy application code
-COPY --chown=appuser:appuser app/ ./app/
-COPY --chown=appuser:appuser prompts/ ./prompts/
-COPY --chown=appuser:appuser pyproject.toml ./
-
-# Create necessary directories
-RUN mkdir -p /app/logs && chown -R appuser:appuser /app
-
-# Switch to non-root user
+# Switch to appuser
 USER appuser
 
-# Expose port
+# Make sure we use the virtual environment and add app to Python path
+ENV PATH="/opt/venv/bin:$PATH"
+ENV PYTHONPATH="/app:$PYTHONPATH"
+
 EXPOSE 8000
 
-# Health check
-HEALTHCHECK --interval=30s --timeout=30s --start-period=5s --retries=3 \
-    CMD python -c "import requests; requests.get('http://localhost:8000/health')" || exit 1
-
-# Default command
-CMD ["python", "-m", "uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
+# Use uvicorn directly from the virtual environment
+CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
